--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "koa-utils",
   "version": "1.0.0",
-  "description": "",
+  "description": "just for online system with koa2",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "keziyuan",
+  "author": "zeevkell",
   "license": "ISC"
 }
