--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "just for online system with koa2",
   "main": "index.js",
   "author": "zeevkell",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "http-errors": "git+https://github.com/zeev-kell/http-errors.git#master"
+  }
 }
