--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "koa-utils",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "just for online system with koa2",
   "main": "index.js",
   "author": "zeevkell",
   "license": "ISC",
   "dependencies": {
-    "http-errors": "git+ssh://git@git.bgionline.cn:PhiX174/http-errors.git#develop"
+    "http-errors": "git+ssh://git@git.bgionline.cn:PhiX174/http-errors.git#v2.0.0"
   }
 }
