--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "author": "zeevkell",
   "license": "ISC",
   "dependencies": {
-    "http-errors": "git+ssh://git@git.bgionline.cn:PhiX174/http-errors.git#"
+    "http-errors": "git+ssh://git@git.bgionline.cn:PhiX174/http-errors.git#develop"
   }
 }
